--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=Spring_Security
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/student_portal
-spring.datasource.username=student_portal
-spring.datasource.password=student_portal
-
+#spring.datasource.url=postgresql://postgres:Mukesh1234@:#@db.cnsftiobwvbtlnpdefef.supabase.co:5432/postgres
+#spring.datasource.username=student_portal
+#spring.datasource.password=student_portal
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
-spring.jpa.open-in-view=false
-logging.level.org.springframework.security.config.annotation.authentication.configuration.InitializeUserDetailsBeanManagerConfigurer=ERROR
+spring.datasource.url=jdbc:postgresql://aws-0-ap-south-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.cnsftiobwvbtlnpdefef
+spring.datasource.password=Mukesh1234@:#
